--- a/project_template.html
+++ b/project_template.html
@@ -1,23 +1,25 @@
-<a href="[LINK]">
-	<div class="project_button">
-		<div class="project_button_desc">
-			<div class="project_button_desc_title">[TITLE]</div>
-			<br>
-			<br>
-			<div class="project_button_desc_desc">
-				[SHORT_DESC]
+<div style="width:800px">
+	<a href="[LINK]" style="width:800px; height:400px; background-color:#ff0000;" width="800px" >
+		<div class="project_button">
+			<div class="project_button_desc">
+				<div class="project_button_desc_title">[TITLE]</div>
+				<br>
+				<br>
+				<div class="project_button_desc_desc">
+					[SHORT_DESC]
+				</div>
+				<br>
+				<br>
+				<div class="project_button_desc_hash">
+				<!--<br>
+				[TAGS]-->
+				</div>
 			</div>
-			<br>
-			<br>
-			<div class="project_button_desc_hash">
-			<br>
-				[TAGS]
+			<div class="project_button_screens">
+				[IMAGES]
 			</div>
 		</div>
-		<div class="project_button_screens">
-			[IMAGES]
-		</div>
-	</div>
-</a>
+	</a>
+</div>
 
 <br>
